# ai-code-analyzer

./: Cargo.toml  README.md
src/: main.rs
src/ai/: engine.rs  mod.rs  openai.rs
src/cmd/: analyze.rs  cmd.rs  mod.rs
src/env/: env.rs  mod.rs
src/explainer/: explainer.rs  mod.rs
src/fs/: file_system.rs  mod.rs
src/quality_analyzer/: mod.rs  quality.rs
src/refactor/: mod.rs  refactor_request.rs
