[package]
name = "code-analyzer"
description = "A command line tool to analyze code"
authors = ["Shahen Hovhannisyan <shahen.hovhannisyan.94@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
openai_api_rust = "0.1.8"
clap = { version = "4.4.11", features = ["derive"]}
